@@ -1,3 +1,9 @@
+2013-01-03  Andreas Schwab  <schwab@linux-m68k.org>
+
+	[BZ #14981]
+	* malloc/mtrace.c (tr_reallochook): If realloc returns NULL when
+	size is zero, record memory as freed.
+
 2013-01-03  Andreas Jaeger  <aj@suse.de>
 
 	* po/ia.po: Add new Interlingua translation.
